<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="com.example.android.hilt.ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Content -->
            <!-- Place all your TextViews, EditTexts, and other views here -->
            <!-- Title -->
            <TextView
                android:id="@+id/txvManangeCarTittle"
                style="@style/TitleText"
                android:text="Gerenciamento do carro" />

            <!-- Car Name -->
            <TextView
                android:id="@+id/txvCarName"
                style="@style/Label"
                android:text="Nome do Carro" />

            <EditText
                android:id="@+id/extCarName"
                style="@style/EditText"
                android:hint="Principal" />

            <!-- Car Model -->
            <TextView
                android:id="@+id/txvCarModel"
                style="@style/Label"
                android:text="Modelo do Carro" />

            <EditText
                android:id="@+id/extCarModel"
                style="@style/EditText"
                android:hint="Fusca" />

            <!-- Actual KM -->
            <TextView
                android:id="@+id/txvActualKM"
                style="@style/Label"
                android:text="KM Atual" />

            <EditText
                android:id="@+id/extActualKM"
                style="@style/EditText"
                android:hint="10000"
                android:inputType="number"
                android:maxLength="6" />
            <ImageView
                style="@style/SeparatorSection"/>

            <!-- Services Title -->
            <TextView
                android:id="@+id/extServiceTittle"
                style="@style/SectionTitle"
                android:text="Serviços" />

            <!-- Oil Change -->
            <TextView
                android:id="@+id/txvOilChange"
                style="@style/Label"
                android:text="Troca de Óleo (KM)" />

            <EditText
                android:id="@+id/extOilChange"
                style="@style/EditText"
                android:hint="10000"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txvInfoOilChange"
                style="@style/InfoText"
                android:text="Proxima troca de oleo com 100000 KMs" />

            <ImageView
                style="@style/SeparatorItens"/>


            <!-- Wheels -->
            <TextView
                android:id="@+id/txvWheels"
                style="@style/Label"
                android:text="Balanceamento e Geometria" />

            <EditText
                android:id="@+id/extWheels"
                style="@style/EditText"
                android:hint="10000"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txvInfoWheels"
                style="@style/InfoText"
                android:text="Proxima troca de oleo com 100000 KMs" />

            <ImageView
                style="@style/SeparatorItens"/>

            <!-- Repeat the pattern for other services -->
            <!-- Brakes -->
            <TextView
                android:id="@+id/txvBreakes"
                style="@style/Label"
                android:text="Balanceamento e Geometria" />

            <EditText
                android:id="@+id/extBreakes"
                style="@style/EditText"
                android:hint="10000"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txvInfoWBreakes"
                style="@style/InfoText"
                android:text="Proxima troca de oleo com 100000 KMs" />

            <ImageView
                style="@style/SeparatorItens"/>


            <!-- Brakes -->
            <TextView
                android:id="@+id/txvFilters"
                style="@style/Label"
                android:text="Balanceamento e Geometria" />

            <EditText
                android:id="@+id/extFilters"
                style="@style/EditText"
                android:hint="10000"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/txvInfoFilters"
                style="@style/InfoText"
                android:text="Proxima troca de oleo com 100000 KMs" />

            <ImageView
                style="@style/SeparatorSection"/>

        </LinearLayout>
    </ScrollView>

    <!-- Save Button -->
    <Button
        android:id="@+id/save_car"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes" />

</LinearLayout>
